fixed scrollbar and text area

--- a/app/globals.css
+++ b/app/globals.css
@@ -34,3 +34,7 @@ body {
     text-wrap: balance;
   }
 }
+::-webkit-scrollbar {
+  width: 0px;
+  background: transparent; /* make scrollbar transparent */
+}
